fdo#68961: Check visible range during scrolling, and re-paint if necessary.

Change-Id: I47383cc0c4cf0ec48ce621ba5acac33db44ba313
(cherry picked from commit e36c8a674845ab19577fc06d44b780549757e1e7)
Reviewed-on: https://gerrit.libreoffice.org/7352
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
Tested-by: Jan Holesovsky <kendy@collabora.com>
(cherry picked from commit 1f349d3240115651346da04daeb3459b31782301)
Reviewed-on: https://gerrit.libreoffice.org/7368
Reviewed-by: Eike Rathke <erack@redhat.com>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>